--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#F85555</color>
+    <color name="yellow">#F3E28F</color>
+    <color name="green">#71E67C</color>
+    <color name="blue">#303F9F</color>
+    <color name="teal_300">#45BAB1</color>
 </resources>
